samples/_failures_safe/1761346770_0fc483_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83666e62.c: In function ‘print_token’:
./samples/SAFE/__tmp_83666e62.c:169:9: error: expected expression at end of input
  169 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF",
      |         ^~~~~~~~
./samples/SAFE/__tmp_83666e62.c:169:9: error: expected declaration or statement at end of input
